[tool.poetry]
name = "books-play"
version = "0.1.0"
description = "Scraping books.toscrape.com"
authors = ["Dan Nelson <danelson@nwi.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
bs4 = "^0.0.2"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
